--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "cfonts": "^2.9.2",
     "cheerio": "^1.0.0-rc.10",
+    "fake-useragent": "^1.0.1",
     "figlet": "^1.5.0",
     "fluent-ffmpeg": "^2.1.2",
     "hxz-api": "^1.0.1",
@@ -25,6 +26,7 @@
     "insta-fetcher": "^1.2.3",
     "jsdom": "^16.6.0",
     "moment-timezone": "^0.5.33",
+    "multistream": "^4.1.0",
     "node-fetch": "^2.6.1",
     "parse-ms": "^3.0.0",
     "qrcode": "^1.4.4",
