--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "awesome-phonenumber": "^2.52.0",
     "axios": "^0.21.1",
     "cfonts": "^2.9.2",
+    "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.10",
     "fake-useragent": "^1.0.1",
     "figlet": "^1.5.0",
     "fluent-ffmpeg": "^2.1.2",
+    "fs": "^0.0.1-security",
     "hxz-api": "^1.0.1",
     "image-to-base64": "^2.2.0",
     "imgbb-uploader": "^1.3.3",
@@ -28,6 +30,7 @@
     "moment-timezone": "^0.5.33",
     "multistream": "^4.1.0",
     "node-fetch": "^2.6.1",
+    "os": "^0.1.2",
     "parse-ms": "^3.0.0",
     "qrcode": "^1.4.4",
     "request": "^2.88.2",
