--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@adiwajshing/baileys": "^3.4.1",
     "awesome-phonenumber": "^2.52.0",
     "axios": "^0.21.1",
+    "brainly-scraper": "^1.0.3",
     "cfonts": "^2.9.2",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.10",
